--- a/backend/model.ipynb
+++ b/backend/model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,6 +158,201 @@
    ],
    "source": [
     "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     C:\\Users\\User\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\User\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\User\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6098936306548763\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.47      0.27      0.35      1416\n",
+      "           1       0.51      0.40      0.45      5527\n",
+      "           2       0.68      0.80      0.73     15639\n",
+      "           3       0.52      0.49      0.51      6707\n",
+      "           4       0.49      0.29      0.36      1923\n",
+      "\n",
+      "    accuracy                           0.61     31212\n",
+      "   macro avg       0.53      0.45      0.48     31212\n",
+      "weighted avg       0.59      0.61      0.59     31212\n",
+      "\n",
+      "Sentence: 'This movie was fantastic!', Predicted Sentiment: 3\n",
+      "Sentence: 'The acting was terrible.', Predicted Sentiment: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "import pandas as pd\n",
+    "from nltk.sentiment import SentimentIntensityAnalyzer\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.feature_extraction.text import CountVectorizer \n",
+    "\n",
+    "# Download NLTK data (if needed)\n",
+    "nltk.download('vader_lexicon')\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "\n",
+    "# Preprocessing\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    tokens = word_tokenize(text.lower())  # Tokenize and lowercase\n",
+    "    tokens = [t for t in tokens if t.isalpha()]  # Remove non-alphabetic tokens\n",
+    "    tokens = [t for t in tokens if t not in stop_words]  # Remove stopwords\n",
+    "    return ' '.join(tokens)\n",
+    "\n",
+    "df['Processed_Phrase'] = df['Phrase'].apply(preprocess_text)\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X = df['Processed_Phrase']\n",
+    "y = df['Sentiment']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Text Vectorization (using a simple bag-of-words approach)\n",
+    "vectorizer = CountVectorizer()\n",
+    "X_train_vectorized = vectorizer.fit_transform(X_train)\n",
+    "X_test_vectorized = vectorizer.transform(X_test)\n",
+    "\n",
+    "# Model Building: Naive Bayes classifier\n",
+    "nb_classifier = MultinomialNB()\n",
+    "nb_classifier.fit(X_train_vectorized, y_train)\n",
+    "\n",
+    "# Model Evaluation\n",
+    "y_pred = nb_classifier.predict(X_test_vectorized)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n",
+    "\n",
+    "# Predict sentiment for new input\n",
+    "def predict_sentiment(input_text):\n",
+    "    input_text = preprocess_text(input_text)\n",
+    "    input_vectorized = vectorizer.transform([input_text])\n",
+    "    predicted_sentiment = nb_classifier.predict(input_vectorized)[0]\n",
+    "    return predicted_sentiment\n",
+    "\n",
+    "# Predict sentiment for new input phrases\n",
+    "new_inputs = [\"This movie was fantastic!\", \"The acting was terrible.\"]\n",
+    "for input_text in new_inputs:\n",
+    "    predicted_sentiment = predict_sentiment(input_text)\n",
+    "    print(f\"Sentence: '{input_text}', Predicted Sentiment: {predicted_sentiment}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\User\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\User\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "import pandas as pd\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# Download NLTK data (if needed)\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Map sentiment labels to 0-4 scale\n",
+    "sentiment_mapping = {\n",
+    "    0: 'negative',\n",
+    "    1: 'somewhat negative',\n",
+    "    2: 'neutral',\n",
+    "    3: 'somewhat positive',\n",
+    "    4: 'positive'\n",
+    "}\n",
+    "\n",
+    "df['Sentiment'] = df['Sentiment'].map(sentiment_mapping)\n",
+    "\n",
+    "# Preprocessing\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    tokens = word_tokenize(text.lower())  # Tokenize and lowercase\n",
+    "    tokens = [t for t in tokens if t.isalpha()]  # Remove non-alphabetic tokens\n",
+    "    tokens = [t for t in tokens if t not in stop_words]  # Remove stopwords\n",
+    "    return ' '.join(tokens)\n",
+    "\n",
+    "df['Processed_Phrase'] = df['Phrase'].apply(preprocess_text)\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X = df['Processed_Phrase']\n",
+    "y = df['Sentiment']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Text Vectorization using TF-IDF\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X_train_tfidf = vectorizer.fit_transform(X_train)\n",
+    "X_test_tfidf = vectorizer.transform(X_test)\n",
+    "\n",
+    "# Model Building: Logistic Regression as an example\n",
+    "model = LogisticRegression(max_iter=5000)  # Increase max_iter for convergence\n",
+    "model.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "# Model Evaluation\n",
+    "y_pred = model.predict(X_test_tfidf)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n",
+    "\n",
+    "# Predict sentiment for new input\n",
+    "def predict_sentiment(input_text):\n",
+    "    input_text = preprocess_text(input_text)\n",
+    "    input_vectorized = vectorizer.transform([input_text])\n",
+    "    predicted_sentiment = model.predict(input_vectorized)[0]\n",
+    "    return predicted_sentiment\n",
+    "\n",
+    "# Predict sentiment for new input phrases\n",
+    "new_inputs = [\"This movie was fantastic!\", \"The acting was terrible.\"]\n",
+    "for input_text in new_inputs:\n",
+    "    predicted_sentiment = predict_sentiment(input_text)\n",
+    "    print(f\"Sentence: '{input_text}', Predicted Sentiment: {predicted_sentiment}\")\n"
    ]
   }
  ],
