--- a/backend/model.ipynb
+++ b/backend/model.ipynb
@@ -281,6 +281,28 @@
       "[nltk_data]     C:\\Users\\User\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6271946687171601\n",
+      "Classification Report:\n",
+      "                    precision    recall  f1-score   support\n",
+      "\n",
+      "         negative       0.60      0.18      0.28      1416\n",
+      "          neutral       0.66      0.88      0.76     15639\n",
+      "         positive       0.62      0.24      0.34      1923\n",
+      "somewhat negative       0.54      0.35      0.42      5527\n",
+      "somewhat positive       0.57      0.47      0.51      6707\n",
+      "\n",
+      "         accuracy                           0.63     31212\n",
+      "        macro avg       0.60      0.42      0.46     31212\n",
+      "     weighted avg       0.61      0.63      0.60     31212\n",
+      "\n",
+      "Sentence: 'This movie was fantastic!', Predicted Sentiment: positive\n",
+      "Sentence: 'The acting was terrible.', Predicted Sentiment: negative\n"
+     ]
     }
    ],
    "source": [
@@ -349,10 +371,307 @@
     "    return predicted_sentiment\n",
     "\n",
     "# Predict sentiment for new input phrases\n",
-    "new_inputs = [\"This movie was fantastic!\", \"The acting was terrible.\"]\n",
+    "new_inputs = [\"This movie was fantastic!\", \"The acting was terrible.\",\"The weather ruined our plans for the day\",\"The presentation could have been better, but it wasn't the worst.\",\"The conference started at 10 AM.\",\"The event was enjoyable; I had a good time.\",\"I loved the movie; it was absolutely fantastic!\",\"The play was outstanding, and I would definitely watch it again.\",\"I went for a walk in the park today.\",\"The movie was of average length.\"\n",
+    "]\n",
     "for input_text in new_inputs:\n",
     "    predicted_sentiment = predict_sentiment(input_text)\n",
     "    print(f\"Sentence: '{input_text}', Predicted Sentiment: {predicted_sentiment}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence: 'This movie was fantastic!', Predicted Sentiment: positive\n",
+      "Sentence: 'The acting was terrible.', Predicted Sentiment: negative\n",
+      "Sentence: 'The weather ruined our plans for the day', Predicted Sentiment: neutral\n",
+      "Sentence: 'The presentation could have been better, but it wasn't the worst.', Predicted Sentiment: somewhat negative\n",
+      "Sentence: 'The conference started at 10 AM.', Predicted Sentiment: neutral\n",
+      "Sentence: 'The event was enjoyable; I had a good time.', Predicted Sentiment: somewhat positive\n",
+      "Sentence: 'I loved the movie; it was absolutely fantastic!', Predicted Sentiment: positive\n",
+      "Sentence: 'The play was outstanding, and I would definitely watch it again.', Predicted Sentiment: positive\n",
+      "Sentence: 'I went for a walk in the park today.', Predicted Sentiment: neutral\n",
+      "Sentence: 'The movie was of average length.', Predicted Sentiment: neutral\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict sentiment for new input phrases\n",
+    "new_inputs = [\"This movie was fantastic!\", \"The acting was terrible.\",\"The weather ruined our plans for the day\",\"The presentation could have been better, but it wasn't the worst.\",\"The conference started at 10 AM.\",\"The event was enjoyable; I had a good time.\",\"I loved the movie; it was absolutely fantastic!\",\"The play was outstanding, and I would definitely watch it again.\",\"I went for a walk in the park today.\",\"The movie was of average length.\"\n",
+    "]\n",
+    "for input_text in new_inputs:\n",
+    "    predicted_sentiment = predict_sentiment(input_text)\n",
+    "    print(f\"Sentence: '{input_text}', Predicted Sentiment: {predicted_sentiment}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence: 'The movie was a complete disaster.', Predicted Sentiment: negative\n",
+      "Sentence: 'I hated the food at that restaurant.', Predicted Sentiment: neutral\n",
+      "Sentence: 'The customer service was awful, very disappointing experience.', Predicted Sentiment: negative\n",
+      "Sentence: 'The traffic was unbearable, making me late for my appointment.', Predicted Sentiment: neutral\n",
+      "Sentence: 'fuck you', Predicted Sentiment: neutral\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict sentiment for new input phrases\n",
+    "new_inputs = [\"The movie was a complete disaster.\",\"I hated the food at that restaurant.\",\"The customer service was awful, very disappointing experience.\",\"The traffic was unbearable, making me late for my appointment.\",\"fuck you\"]\n",
+    "for input_text in new_inputs:\n",
+    "    predicted_sentiment = predict_sentiment(input_text)\n",
+    "    print(f\"Sentence: '{input_text}', Predicted Sentiment: {predicted_sentiment}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv(r\"C:\\Users\\User\\Desktop\\projects\\Sentiment project\\backend\\train.tsv\\train.tsv\",  sep='\\t')\n",
+    "\n",
+    "# Map sentiment labels to 0-4 scale\n",
+    "sentiment_mapping = {\n",
+    "    0: 'negative',\n",
+    "    1: 'somewhat negative',\n",
+    "    2: 'neutral',\n",
+    "    3: 'somewhat positive',\n",
+    "    4: 'positive'\n",
+    "}\n",
+    "\n",
+    "df['Sentiment'] = df['Sentiment'].map(sentiment_mapping)\n",
+    "\n",
+    "# Preprocessing\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    tokens = word_tokenize(text.lower())  # Tokenize and lowercase\n",
+    "    tokens = [t for t in tokens if t.isalpha()]  # Remove non-alphabetic tokens\n",
+    "    tokens = [t for t in tokens if t not in stop_words]  # Remove stopwords\n",
+    "    return ' '.join(tokens)\n",
+    "\n",
+    "df['Processed_Phrase'] = df['Phrase'].apply(preprocess_text)\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X = df['Processed_Phrase']\n",
+    "y = df['Sentiment']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Text Vectorization using TF-IDF with n-grams (1, 2)\n",
+    "vectorizer = TfidfVectorizer(ngram_range=(1, 2))\n",
+    "X_train_tfidf = vectorizer.fit_transform(X_train)\n",
+    "X_test_tfidf = vectorizer.transform(X_test)\n",
+    "\n",
+    "# Model Building: Random Forest Classifier with class weights\n",
+    "model = RandomForestClassifier(class_weight='balanced', random_state=42)\n",
+    "model.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "# Model Evaluation\n",
+    "y_pred = model.predict(X_test_tfidf)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, 28, 128)           1861120   \n",
+      "                                                                 \n",
+      " lstm (LSTM)                 (None, 100)               91600     \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 5)                 505       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1953225 (7.45 MB)\n",
+      "Trainable params: 1953225 (7.45 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/5\n",
+      "1951/1951 [==============================] - 108s 55ms/step - loss: 0.9740 - accuracy: 0.6107 - val_loss: 0.8710 - val_accuracy: 0.6506\n",
+      "Epoch 2/5\n",
+      "1951/1951 [==============================] - 105s 54ms/step - loss: 0.7979 - accuracy: 0.6762 - val_loss: 0.8515 - val_accuracy: 0.6602\n",
+      "Epoch 3/5\n",
+      "1951/1951 [==============================] - 109s 56ms/step - loss: 0.7234 - accuracy: 0.7015 - val_loss: 0.8573 - val_accuracy: 0.6576\n",
+      "Epoch 4/5\n",
+      "1951/1951 [==============================] - 108s 55ms/step - loss: 0.6673 - accuracy: 0.7221 - val_loss: 0.8763 - val_accuracy: 0.6597\n",
+      "Epoch 5/5\n",
+      "1951/1951 [==============================] - 107s 55ms/step - loss: 0.6236 - accuracy: 0.7349 - val_loss: 0.8979 - val_accuracy: 0.6578\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Sequential' object has no attribute 'predict_classes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\User\\Desktop\\projects\\Sentiment project\\backend\\model.ipynb Cell 9\u001b[0m line \u001b[0;36m6\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/projects/Sentiment%20project/backend/model.ipynb#X11sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m model\u001b[39m.\u001b[39mfit(X_train, y_train, validation_data\u001b[39m=\u001b[39m(X_test, y_test), epochs\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, batch_size\u001b[39m=\u001b[39m\u001b[39m64\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/projects/Sentiment%20project/backend/model.ipynb#X11sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39m# Model Evaluation\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/projects/Sentiment%20project/backend/model.ipynb#X11sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m y_pred \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mpredict_classes(X_test)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/projects/Sentiment%20project/backend/model.ipynb#X11sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m accuracy \u001b[39m=\u001b[39m accuracy_score(y_test, y_pred)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/projects/Sentiment%20project/backend/model.ipynb#X11sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAccuracy:\u001b[39m\u001b[39m\"\u001b[39m, accuracy)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Sequential' object has no attribute 'predict_classes'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Embedding, LSTM, Dense\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv(r\"C:\\Users\\User\\Desktop\\projects\\Sentiment project\\backend\\train.tsv\\train.tsv\",  sep='\\t')\n",
+    "\n",
+    "# Map sentiment labels to 0-4 scale\n",
+    "sentiment_mapping = {\n",
+    "    0: 'negative',\n",
+    "    1: 'somewhat negative',\n",
+    "    2: 'neutral',\n",
+    "    3: 'somewhat positive',\n",
+    "    4: 'positive'\n",
+    "}\n",
+    "\n",
+    "df['Sentiment'] = df['Sentiment'].map(sentiment_mapping)\n",
+    "\n",
+    "# Preprocessing\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    tokens = word_tokenize(text.lower())  # Tokenize and lowercase\n",
+    "    tokens = [t for t in tokens if t.isalpha()]  # Remove non-alphabetic tokens\n",
+    "    tokens = [t for t in tokens if t not in stop_words]  # Remove stopwords\n",
+    "    return ' '.join(tokens)\n",
+    "\n",
+    "df['Processed_Phrase'] = df['Phrase'].apply(preprocess_text)\n",
+    "\n",
+    "# Encode the labels\n",
+    "label_encoder = LabelEncoder()\n",
+    "y = label_encoder.fit_transform(df['Sentiment'])\n",
+    "\n",
+    "# Tokenize the text data\n",
+    "tokenizer = Tokenizer()\n",
+    "tokenizer.fit_on_texts(df['Processed_Phrase'])\n",
+    "X = tokenizer.texts_to_sequences(df['Processed_Phrase'])\n",
+    "X = pad_sequences(X)\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Model Building: LSTM\n",
+    "embedding_dim = 128\n",
+    "vocab_size = len(tokenizer.word_index) + 1\n",
+    "max_length = X.shape[1]\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Embedding(input_dim=vocab_size, output_dim=embedding_dim, input_length=max_length))\n",
+    "model.add(LSTM(units=100))\n",
+    "model.add(Dense(5, activation='softmax'))  # 5 classes for sentiment\n",
+    "\n",
+    "model.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "model.summary()\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=5, batch_size=64)\n",
+    "\n",
+    "# Model Evaluation\n",
+    "y_pred_prob = model.predict(X_test)\n",
+    "y_pred = np.argmax(y_pred_prob, axis=1)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "976/976 [==============================] - 8s 8ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_prob = model.predict(X_test)\n",
+    "y_pred = np.argmax(y_pred_prob, axis=1)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6578239138792772\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.50      0.46      0.48      1416\n",
+      "           1       0.73      0.81      0.77     15639\n",
+      "           2       0.56      0.42      0.48      1923\n",
+      "           3       0.56      0.49      0.53      5527\n",
+      "           4       0.59      0.55      0.57      6707\n",
+      "\n",
+      "    accuracy                           0.66     31212\n",
+      "   macro avg       0.59      0.55      0.56     31212\n",
+      "weighted avg       0.65      0.66      0.65     31212\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))"
    ]
   }
  ],
