--- a/backend/model.ipynb
+++ b/backend/model.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -526,26 +526,30 @@
       "Non-trainable params: 0 (0.00 Byte)\n",
       "_________________________________________________________________\n",
       "Epoch 1/5\n",
-      "1951/1951 [==============================] - 108s 55ms/step - loss: 0.9740 - accuracy: 0.6107 - val_loss: 0.8710 - val_accuracy: 0.6506\n",
+      "1707/1707 [==============================] - 133s 76ms/step - loss: 0.9858 - accuracy: 0.6059 - val_loss: 0.8821 - val_accuracy: 0.6449\n",
       "Epoch 2/5\n",
-      "1951/1951 [==============================] - 105s 54ms/step - loss: 0.7979 - accuracy: 0.6762 - val_loss: 0.8515 - val_accuracy: 0.6602\n",
+      "1707/1707 [==============================] - 118s 69ms/step - loss: 0.8059 - accuracy: 0.6731 - val_loss: 0.8584 - val_accuracy: 0.6562\n",
       "Epoch 3/5\n",
-      "1951/1951 [==============================] - 109s 56ms/step - loss: 0.7234 - accuracy: 0.7015 - val_loss: 0.8573 - val_accuracy: 0.6576\n",
+      "1707/1707 [==============================] - 122s 72ms/step - loss: 0.7247 - accuracy: 0.6998 - val_loss: 0.8613 - val_accuracy: 0.6574\n",
       "Epoch 4/5\n",
-      "1951/1951 [==============================] - 108s 55ms/step - loss: 0.6673 - accuracy: 0.7221 - val_loss: 0.8763 - val_accuracy: 0.6597\n",
+      "1707/1707 [==============================] - 120s 70ms/step - loss: 0.6646 - accuracy: 0.7218 - val_loss: 0.8939 - val_accuracy: 0.6546\n",
       "Epoch 5/5\n",
-      "1951/1951 [==============================] - 107s 55ms/step - loss: 0.6236 - accuracy: 0.7349 - val_loss: 0.8979 - val_accuracy: 0.6578\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Sequential' object has no attribute 'predict_classes'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\User\\Desktop\\projects\\Sentiment project\\backend\\model.ipynb Cell 9\u001b[0m line \u001b[0;36m6\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/projects/Sentiment%20project/backend/model.ipynb#X11sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m model\u001b[39m.\u001b[39mfit(X_train, y_train, validation_data\u001b[39m=\u001b[39m(X_test, y_test), epochs\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, batch_size\u001b[39m=\u001b[39m\u001b[39m64\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/projects/Sentiment%20project/backend/model.ipynb#X11sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39m# Model Evaluation\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/projects/Sentiment%20project/backend/model.ipynb#X11sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m y_pred \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mpredict_classes(X_test)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/projects/Sentiment%20project/backend/model.ipynb#X11sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m accuracy \u001b[39m=\u001b[39m accuracy_score(y_test, y_pred)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/projects/Sentiment%20project/backend/model.ipynb#X11sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAccuracy:\u001b[39m\u001b[39m\"\u001b[39m, accuracy)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Sequential' object has no attribute 'predict_classes'"
+      "1707/1707 [==============================] - 119s 70ms/step - loss: 0.6186 - accuracy: 0.7363 - val_loss: 0.9374 - val_accuracy: 0.6470\n",
+      "1464/1464 [==============================] - 14s 9ms/step\n",
+      "Accuracy: 0.6469733863044128\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.50      0.42      0.45      2113\n",
+      "           1       0.72      0.80      0.76     23588\n",
+      "           2       0.50      0.50      0.50      2848\n",
+      "           3       0.54      0.47      0.51      8228\n",
+      "           4       0.58      0.51      0.54     10041\n",
+      "\n",
+      "    accuracy                           0.65     46818\n",
+      "   macro avg       0.57      0.54      0.55     46818\n",
+      "weighted avg       0.64      0.65      0.64     46818\n",
+      "\n"
      ]
     }
    ],
