--- a/backend/model.ipynb
+++ b/backend/model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,15 @@
       "     weighted avg       0.61      0.63      0.60     31212\n",
       "\n",
       "Sentence: 'This movie was fantastic!', Predicted Sentiment: positive\n",
-      "Sentence: 'The acting was terrible.', Predicted Sentiment: negative\n"
+      "Sentence: 'The acting was terrible.', Predicted Sentiment: negative\n",
+      "Sentence: 'The weather ruined our plans for the day', Predicted Sentiment: neutral\n",
+      "Sentence: 'The presentation could have been better, but it wasn't the worst.', Predicted Sentiment: somewhat negative\n",
+      "Sentence: 'The conference started at 10 AM.', Predicted Sentiment: neutral\n",
+      "Sentence: 'The event was enjoyable; I had a good time.', Predicted Sentiment: somewhat positive\n",
+      "Sentence: 'I loved the movie; it was absolutely fantastic!', Predicted Sentiment: positive\n",
+      "Sentence: 'The play was outstanding, and I would definitely watch it again.', Predicted Sentiment: positive\n",
+      "Sentence: 'I went for a walk in the park today.', Predicted Sentiment: neutral\n",
+      "Sentence: 'The movie was of average length.', Predicted Sentiment: neutral\n"
      ]
     }
    ],
@@ -380,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -396,13 +404,16 @@
       "Sentence: 'I loved the movie; it was absolutely fantastic!', Predicted Sentiment: positive\n",
       "Sentence: 'The play was outstanding, and I would definitely watch it again.', Predicted Sentiment: positive\n",
       "Sentence: 'I went for a walk in the park today.', Predicted Sentiment: neutral\n",
-      "Sentence: 'The movie was of average length.', Predicted Sentiment: neutral\n"
+      "Sentence: 'The movie was of average length.', Predicted Sentiment: neutral\n",
+      "Sentence: 'great', Predicted Sentiment: somewhat positive\n",
+      "Sentence: 'not great', Predicted Sentiment: somewhat positive\n",
+      "Sentence: 'this is awesome', Predicted Sentiment: neutral\n"
      ]
     }
    ],
    "source": [
     "# Predict sentiment for new input phrases\n",
-    "new_inputs = [\"This movie was fantastic!\", \"The acting was terrible.\",\"The weather ruined our plans for the day\",\"The presentation could have been better, but it wasn't the worst.\",\"The conference started at 10 AM.\",\"The event was enjoyable; I had a good time.\",\"I loved the movie; it was absolutely fantastic!\",\"The play was outstanding, and I would definitely watch it again.\",\"I went for a walk in the park today.\",\"The movie was of average length.\"\n",
+    "new_inputs = [\"This movie was fantastic!\", \"The acting was terrible.\",\"The weather ruined our plans for the day\",\"The presentation could have been better, but it wasn't the worst.\",\"The conference started at 10 AM.\",\"The event was enjoyable; I had a good time.\",\"I loved the movie; it was absolutely fantastic!\",\"The play was outstanding, and I would definitely watch it again.\",\"I went for a walk in the park today.\",\"The movie was of average length.\",\"great\",\"not great\",\"this is awesome\"\n",
     "]\n",
     "for input_text in new_inputs:\n",
     "    predicted_sentiment = predict_sentiment(input_text)\n",
@@ -649,26 +660,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6578239138792772\n",
+      "Accuracy: 0.6469733863044128\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.50      0.46      0.48      1416\n",
-      "           1       0.73      0.81      0.77     15639\n",
-      "           2       0.56      0.42      0.48      1923\n",
-      "           3       0.56      0.49      0.53      5527\n",
-      "           4       0.59      0.55      0.57      6707\n",
+      "           0       0.50      0.42      0.45      2113\n",
+      "           1       0.72      0.80      0.76     23588\n",
+      "           2       0.50      0.50      0.50      2848\n",
+      "           3       0.54      0.47      0.51      8228\n",
+      "           4       0.58      0.51      0.54     10041\n",
       "\n",
-      "    accuracy                           0.66     31212\n",
-      "   macro avg       0.59      0.55      0.56     31212\n",
-      "weighted avg       0.65      0.66      0.65     31212\n",
+      "    accuracy                           0.65     46818\n",
+      "   macro avg       0.57      0.54      0.55     46818\n",
+      "weighted avg       0.64      0.65      0.64     46818\n",
       "\n"
      ]
     }
@@ -676,6 +687,30 @@
    "source": [
     "print(\"Accuracy:\", accuracy)\n",
     "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Save the model to disk\n",
+    "with open('lstm_model.pkl', 'wb') as model_file:\n",
+    "    pickle.dump(model, model_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the tokenizer to a file\n",
+    "with open('tokenizer.pkl', 'wb') as f:\n",
+    "    pickle.dump(tokenizer, f)"
    ]
   }
  ],
